--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "aws/aws-sdk-php": "^3.33"
+        "aws/aws-sdk-php": "^3.33",
+        "php-ffmpeg/php-ffmpeg": "^0.19.0"
     }
 }
